add style header and hero

--- a/abz-testtask/src/index.scss
+++ b/abz-testtask/src/index.scss
@@ -1,4 +1,5 @@
-// @import-normalize;
+
+// Normalize -------------
 
 body {
   font-family: 'Nunito', sans-serif;
@@ -11,78 +12,86 @@ code {
     monospace;
 }
 
-// /* Box sizing rules */
-// *,
-// *::before,
-// *::after {
-//   box-sizing: border-box;
-// }
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
-// /* Remove default margin */
-// body,
-// h1,
-// h2,
-// h3,
-// h4,
-// p,
-// figure,
-// blockquote,
-// dl,
-// dd {
-//   margin: 0;
-// }
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
 
-// /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-// ul,
-// ol {
-//   list-style: none;
-//   padding: 0;
-// }
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul,
+ol {
+  list-style: none;
+  padding: 0;
+}
 
-// /* Set core root defaults */
-// html:focus-within {
-//   scroll-behavior: smooth;
-// }
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
 
-// /* Set core body defaults */
-// body {
-//   min-height: 100vh;
-//   text-rendering: optimizeSpeed;
-//   line-height: 1.5;
-// }
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
 
-// /* A elements that don't have a class get default styles */
-// a:not([class]) {
-//   text-decoration-skip-ink: auto;
-// }
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
 
-// /* Make images easier to work with */
-// img,
-// picture {
-//   max-width: 100%;
-//   display: block;
-// }
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
 
-// /* Inherit fonts for inputs and buttons */
-// input,
-// button,
-// textarea,
-// select {
-//   font: inherit;
-// }
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
 
-// /* Remove all animations and transitions for people that prefer not to see them */
-// @media (prefers-reduced-motion: reduce) {
-//   html:focus-within {
-//     scroll-behavior: auto;
-//   }
+/* Remove all animations and transitions for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
 
-//   *,
-//   *::before,
-//   *::after {
-//     animation-duration: 0.01ms !important;
-//     animation-iteration-count: 1 !important;
-//     transition-duration: 0.01ms !important;
-//     scroll-behavior: auto !important;
-//   }
-// }
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+// Base
+@import "./sass/base/container";
+
+// Utils
+@import "./sass/utils/variable";
+
+// Components
+@import "./sass/components/buttons.scss";
