--- a/abz-testtask/src/UsersList/UserList.scss
+++ b/abz-testtask/src/UsersList/UserList.scss
@@ -1,14 +1,52 @@
-.text {
+.user-list-section {
+  padding-bottom: 140px;
+}
+.user-list-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-avatar {
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.user-list-text {
   color: #000;
   font-size: 16px;
   line-height: 26px;
   text-align: center;
+  margin-top: 20px;
 }
 
-.title {
+.user-list-title {
   color: #000;
   font-size: 40px;
   font-weight: 400;
   line-height: 40px;
   text-align: center;
+  margin-bottom: 50px;
+}
+
+.user-card {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-card-list {
+  margin: 0;
+}
+
+.user-card-item {
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
+    &:last-child {
+    margin-bottom: 50px;
+  }
 }
